--- a/package.json
+++ b/package.json
@@ -19,12 +19,41 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.0",
-    "@capacitor/haptics": "4.1.0",
-    "@capacitor/keyboard": "4.1.1",
-    "@capacitor/status-bar": "4.1.1",
-    "@ionic/angular": "^6.1.9",
+    "@capacitor-community/admob": "^4.1.0",
+    "@capacitor-community/firebase-analytics": "^4.0.0",
+    "@capacitor/android": "^4.7.0",
+    "@capacitor/app": "^4.1.1",
+    "@capacitor/app-launcher": "^4.1.0",
+    "@capacitor/browser": "^4.1.1",
+    "@capacitor/cli": "^4.7.0",
+    "@capacitor/core": "^4.7.0",
+    "@capacitor/haptics": "^4.1.0",
+    "@capacitor/ios": "^4.7.0",
+    "@capacitor/keyboard": "^4.1.1",
+    "@capacitor/local-notifications": "^4.1.5",
+    "@capacitor/push-notifications": "^4.1.2",
+    "@capacitor/share": "^4.1.1",
+    "@capacitor/splash-screen": "^4.2.0",
+    "@capacitor/status-bar": "^4.1.1",
+    "@ionic/angular": "^6.5.6",
+    "@ionic/storage-angular": "^3.0.6",
+    "capacitor-codepush": "github:wako-app/capacitor-codepush#v2.0.0",
+    "capacitor-music-controls-plugin": "github:wako-app/capacitor-music-controls-plugin#v3.0.0",
+    "com-darryncampbell-cordova-plugin-intent": "github:wako-app/darryncampbell-cordova-plugin-intent",
+    "cordova-plugin-advanced-http": "^3.3.1",
+    "cordova-plugin-background-mode": "git+https://github.com/alexowson/cordova-plugin-background-mode.git#fix-capacitor",
+    "cordova-plugin-chromecast": "github:wako-app/cordova-plugin-chromecast",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-media": "git+https://github.com/wako-app/cordova-plugin-media.git",
+    "cordova-plugin-nativestorage": "^2.3.2",
+    "cordova-plugin-purchase": "^11.0.0",
+    "cordova-plugin-screen-orientation": "^3.0.2",
+    "cordova-plugin-zeroconf": "^1.4.2",
+    "cordova-simple-volume": "^1.0.4",
+    "cordova-sqlite-storage": "^6.1.0",
+    "es6-promise-plugin": "^4.2.2",
+    "localforage-cordovasqlitedriver": "^1.8.0",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -41,7 +70,10 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.7.0",
+    "@capacitor-community/http": "^2.0.0-0",
+    "@capacitor/device": "^4.1.0",
+    "@capacitor/dialog": "^4.1.0",
+    "@capacitor/filesystem": "^4.1.4",
     "@ionic/angular-toolkit": "^8.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
